5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1664_2972.log
== TEST (2019-04-16 11:10:13) 
-- CODE:
so = int(input("Qual a posicao inicial? "))
v = int(input("Qual a velocidade do objeto? "))
t = int(input("Qual o tempo de deslocamento?" ))
s = so + ( v * t )

if(s >= 1000):
	print(Sim)
	
else:
	print(Nao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(Sim)
NameError: name 'Sim' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:10:42) 
-- CODE:
so = int(input("Qual a posicao inicial? "))
v = int(input("Qual a velocidade do objeto? "))
t = int(input("Qual o tempo de deslocamento?" ))
s = so + ( v * t )

if(s >= 1000):
	print("Sim")
	
else:
	print("Nao")
-- OUTPUT:
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:11:15) 
-- CODE:
so = int(input("Qual a posicao inicial? "))
v = int(input("Qual a velocidade do objeto? "))
t = int(input("Qual o tempo de deslocamento?" ))
s = so + ( v * t )

if(s >= 1000):
	print(s)
	print("Sim")
	
else:
	print(s)
	print("Nao")
-- OUTPUT:
3002
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:11:23) 
-- CODE:
so = int(input("Qual a posicao inicial? "))
v = int(input("Qual a velocidade do objeto? "))
t = int(input("Qual o tempo de deslocamento?" ))
s = so + ( v * t )

if(s >= 1000):
	print(s)
	print("Sim")
	
else:
	print(s)
	print("Nao")
-- EXECUTION TIME:
0.14737
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
Sim
---- user output:
3002
Sim
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
Sim
---- user output:
4252
Sim
-- TEST CASE 3:
---- input:
5
50
15
---- correct output:
755
Nao
---- user output:
755
Nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
